--- a/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
+++ b/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
@@ -76,7 +76,7 @@ Image credit: [credit](https://danielmiessler.com/images/ordered_chaos.png)
 
 --
 
-2. **Unknowability** [Ontological Randomness]
+2. **Unknowability** [Epistemological Randomness]
 
 --
 
@@ -308,7 +308,14 @@ gf_point(y ~ x, data = D2 %>% head(35000), size = 0.0005) %>%
   gf_refine(coord_equal()) 
 ```
 
-![:scale 97%](images/Sierpinski1.png)
+.pull-left[
+![:scale 97%](images/Sierpinski1A.png)
+]
+.pull-right[
+![:scale 97%](images/Sierpinski1B.png)
+]
+
+<!-- ![:scale 97%](images/Sierpinski1A.png) -->
 
 ---
 
@@ -327,11 +334,53 @@ gf_point(y ~ x, data = D2, size = 0.01, color = "gray50") %>%
   gf_theme(theme_void())
 ```
 
-![:scale 97%](images/Sierpinski2.png)
-At teach step:
+.pull-left[
+![:scale 97%](images/Sierpinski2A.png)
+]
+.pull-right[
+![:scale 97%](images/Sierpinski2B.png)
+]
+
+<!-- ![:scale 97%](images/Sierpinski2.png) -->
+
+At each step:
 
 * Pick a random corner of the triangle.
 * Move half-way to that corner and place a dot.
+
+---
+
+# Some Big Questoins
+
+1. Does God use randomness to achieve his purposes?
+
+--
+
+2. If so, does that change how we think about God (and ourselves)?
+
+3. If not, why do random models do such a good job of explaining things?
+
+
+---
+
+# Does it Matter?
+
+Does it matter how God relates to (apparent) randomness?
+
+--
+
+1. If things are not random, why do they behave that way?
+
+    * Mediation of Christ: to make the world more liveable for humans?
+    * Why doesn't God make different choices?
+    
+1. Life events
+
+    * Lots
+    * Coincidenes
+    * Insurance
+    
+
 
 ---
 
@@ -351,7 +400,7 @@ philosophic/theological position.
 
     * Game design [Sorry, cribbage, etc.]
     * Genetics
-    * etc.
+    * Quantum computation
 --
 
 3. I prefer **symmetric interpretations** of randomness.
