--- a/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
+++ b/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
@@ -232,7 +232,7 @@ knitr::include_graphics("images/sorry-game-over-shoulder.jpg")
 # Joseph Petrus Wergin
 
 <p class = "center">
-![:scale 40%](http://www.cribbage.org/images/hall2.jpg)
+![:scale 40%](images/joe-wergin-hof.jpg)
 </p>
 
 ???
@@ -246,7 +246,7 @@ knitr::include_graphics("images/sorry-game-over-shoulder.jpg")
 # Random Life Events
 
 <p class = "center middle">
-![:scale 40%](http://www.cribbage.org/images/hall2.jpg)
+![:scale 40%](images/joe-wergin-hof.jpg)
 </p>
 
 ---
