--- a/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
+++ b/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
@@ -242,6 +242,11 @@ knitr::include_graphics("images/sorry-game-over-shoulder.jpg")
 [obit](https://www.findagrave.com/memorial/12342149/joseph-petrus-wergin)
 
 ---
+class: inverse, center, middle
+
+* Beyond Games
+
+---
 
 # Random Life Events
 
@@ -349,6 +354,11 @@ At each step:
 * Move half-way to that corner and place a dot.
 
 ---
+class: inverse, center, middle
+
+* Some Big Questions
+
+---
 
 # Some Big Questoins
 
@@ -381,7 +391,14 @@ Does it matter how God relates to (apparent) randomness?
     * Lots
     * Coincidenes
     * Insurance
-    
+
+--
+
+3. How much are we shaped by "random" things that happen in our lives?
+
+    * The three movies answer this question in different ways.
+
+
 ---
 
 # A Thought Experiment
