--- a/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
+++ b/docs/random-thoughts/2021-01-07-ACMS/Random-Thoughts-ACMS.Rmd
@@ -452,6 +452,8 @@ Slides available at <https://rpruim.github.io/talks/>
 
 * [At Ministry Theorem](http://ministrytheorem.calvinseminary.edu/wp-content/uploads/2016/06/9_pruim.pdf)
 
+    * Includes a reading list.
+
 
 
 
